# ChangeLog for app-emacs/csharp-mode
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/80csharp-mode-gentoo.el, +csharp-mode-0.6.0-r1.ebuild,
  +metadata.xml:
  using new-style virtual dependency, losing some functionality (no alternate
  cc-mode anymore)
