@@ -1,5 +1,5 @@
 AUX 80csharp-mode-gentoo.el 213 RMD160 32c2aa17ade5759e85632c8e77424c08ce2281c1 SHA1 b2006702609c3b9fb8fb95eef9d8d652986cd522 SHA256 2eec406baaa31b5b28f0c34728d46f3630fefafc221ffaf404c31d8d3d582bbe
 DIST csharp-mode-0.6.0.tar.bz2 6068 RMD160 5ab62e1594f77ab91c377896c716370e39abc050 SHA1 370499dff5a9ca904a8f568e7c4033d6ed0e3af7 SHA256 4c62fc019d0ac14254a1fbd814c7c3af78f070525cf9b27f00ab69d31ec0151c
-EBUILD csharp-mode-0.6.0-r1.ebuild 441 RMD160 176fdaf0618b6019d29cc50a5e1d9e342d3022ff SHA1 1b6097f6af09897f6d241980aea955bc02f2530c SHA256 ef0da4026ea34abbca56f1975d69c08b780832cbfc105072054cef4e5a40eea2
-MISC ChangeLog 356 RMD160 349218e5d32c06440c30b73fe7183cd4a0f004c0 SHA1 efe60ccbd84c05de1409a4f751315286a688fd0b SHA256 e6860df43f178b173e131be78010e61f39b12b9caef7d24379fa079c7744ad7c
+EBUILD csharp-mode-0.6.0-r1.ebuild 1023 RMD160 ac0b03f0e68f7c2203f7733bfc8b0cc04b71d0c8 SHA1 06f8d0f8ba12995bb8fc30a2b0d3d303d0347e88 SHA256 51e9bde6fa9b13edab74cdcb5004ebc5188355f480df5a159b564c4866132263
+MISC ChangeLog 485 RMD160 259214684d1e92150d30ddaf10205df4f47c09fb SHA1 c02f83518de2d5814d289a1d6f1f68546dc37992 SHA256 71a79590b42bbb84176f3f5d0b5c7e3ded67f164db8daa74608c592d24919a01
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
